--- a/backend/package.json
+++ b/backend/package.json
@@ -20,8 +20,10 @@
   },
   "dependencies": {
     "@nestjs/common": "10.3.9",
+    "@nestjs/config": "3.2.2",
     "@nestjs/core": "10.3.9",
     "@nestjs/platform-express": "10.3.9",
+    "@prisma/client": "5.15.0",
     "reflect-metadata": "0.2.2",
     "rxjs": "7.8.1"
   },
