--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -2,16 +2,19 @@ version: "3.8"
 
 services:
   postgres:
-    image: postgres:13
+    image: postgres:14.5
     container_name: postgres
     environment:
-      POSTGRES_USER: user
-      POSTGRES_PASSWORD: password
-      POSTGRES_DB: product_management
+      POSTGRES_USER: dev
+      POSTGRES_PASSWORD: dev
+      PGDATA: /var/lib/postgresql/data/pgdata
     volumes:
-      - postgres_data:/var/lib/postgresql/data
+      - postgres:/var/lib/postgresql/data
     ports:
       - "5432:5432"
+    restart: always
+    networks:
+      - product-management
 
   backend:
     build:
@@ -20,10 +23,18 @@ services:
     container_name: backend
     environment:
       DATABASE_URL: ${DATABASE_URL}
+    env_file:
+      - ./backend/.env
     depends_on:
       - postgres
     ports:
       - "3001:3000"
+    networks:
+      - product-management
+
+networks:
+  product-management:
+    driver: bridge
 
 volumes:
-  postgres_data:
+  postgres:
