--- a/backend/package.json
+++ b/backend/package.json
@@ -16,14 +16,20 @@
     "test:watch": "jest --watch",
     "test:cov": "jest --coverage",
     "test:debug": "node --inspect-brk -r tsconfig-paths/register -r ts-node/register node_modules/.bin/jest --runInBand",
-    "test:e2e": "jest --config ./test/jest-e2e.json"
+    "test:e2e": "jest --config ./test/jest-e2e.json",
+    "prisma": "prisma migrate dev --name init",
+    "prisma:migration:apply": "prisma migrate dev",
+    "prisma:migration:create": "prisma migrate dev --create-only"
   },
   "dependencies": {
     "@nestjs/common": "10.3.9",
     "@nestjs/config": "3.2.2",
     "@nestjs/core": "10.3.9",
     "@nestjs/platform-express": "10.3.9",
+    "@nestjs/swagger": "7.3.1",
     "@prisma/client": "5.15.0",
+    "class-transformer": "0.5.1",
+    "class-validator": "0.14.1",
     "reflect-metadata": "0.2.2",
     "rxjs": "7.8.1"
   },
