--- a/backend/Dockerfile
+++ b/backend/Dockerfile
@@ -1,15 +1,25 @@
-FROM node:20.14.0 as builder
+# Backend Dockerfile
 
+# Use the official Node.js 18 image as a base
+FROM node:18-alpine
+
+# Set the working directory
 WORKDIR /app
 
+# Copy the package.json and package-lock.json
 COPY package*.json ./
 
+# Install dependencies
 RUN npm install
 
+# Copy the rest of the application code
 COPY . .
 
+# Generate Prisma Client
 RUN npx prisma generate
 
+# Expose the application port
 EXPOSE 3000
 
-CMD ["npm", "run", "start:prod"]
+# Command to run the application
+CMD ["sh", "-c", "npx prisma migrate deploy && node dist/main.js"]
