--- a/backend/package.json
+++ b/backend/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "product-management",
+  "name": "product-management-backend",
   "version": "0.0.0",
   "description": "",
   "author": "Rafał Chmielewski <rafalchmielewski.praca@gmail.com>",
@@ -11,6 +11,7 @@
     "start:dev": "nest start --watch",
     "start:debug": "nest start --debug --watch",
     "start:prod": "node dist/main",
+    "start:migrate:prod": "prisma migrate deploy && npm run start:prod",
     "lint": "eslint \"{src,apps,libs,test}/**/*.ts\" --fix",
     "test": "jest",
     "test:watch": "jest --watch",
@@ -19,15 +20,17 @@
     "test:e2e": "jest --config ./test/jest-e2e.json",
     "prisma": "prisma migrate dev --name init",
     "prisma:migration:apply": "prisma migrate dev",
-    "prisma:migration:create": "prisma migrate dev --create-only"
+    "prisma:migration:create": "prisma migrate dev --create-only",
+    "prisma:migration:deploy": "prisma migrate deploy"
   },
   "dependencies": {
+    "@casl/prisma": "1.4.1",
     "@nestjs/common": "10.3.9",
     "@nestjs/config": "3.2.2",
     "@nestjs/core": "10.3.9",
     "@nestjs/platform-express": "10.3.9",
     "@nestjs/swagger": "7.3.1",
-    "@prisma/client": "5.15.0",
+    "@prisma/client": "5.4.1",
     "class-transformer": "0.5.1",
     "class-validator": "0.14.1",
     "reflect-metadata": "0.2.2",
