--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -23,12 +23,24 @@ services:
     container_name: backend
     environment:
       DATABASE_URL: ${DATABASE_URL}
-    env_file:
-      - ./backend/.env
     depends_on:
       - postgres
     ports:
+      - "3000:3000"
+    networks:
+      - product-management
+
+  frontend:
+    build:
+      context: ./frontend
+      dockerfile: Dockerfile
+    container_name: frontend
+    depends_on:
+      - backend
+    ports:
       - "3001:3000"
+    environment:
+      - BACKEND_URL=${BACKEND_URL}
     networks:
       - product-management
 
