--- a/backend/package.json
+++ b/backend/package.json
@@ -24,13 +24,13 @@
     "prisma:migration:deploy": "prisma migrate deploy"
   },
   "dependencies": {
-    "@casl/prisma": "1.4.1",
+    "@casl/prisma": "1.5.1",
     "@nestjs/common": "10.3.9",
     "@nestjs/config": "3.2.2",
     "@nestjs/core": "10.3.9",
     "@nestjs/platform-express": "10.3.9",
     "@nestjs/swagger": "7.3.1",
-    "@prisma/client": "5.4.1",
+    "@prisma/client": "6.4.1",
     "class-transformer": "0.5.1",
     "class-validator": "0.14.1",
     "reflect-metadata": "0.2.2",
@@ -51,6 +51,7 @@
     "eslint-plugin-prettier": "5.1.3",
     "jest": "29.7.0",
     "prettier": "3.3.2",
+    "prisma": "6.4.1",
     "source-map-support": "0.5.21",
     "supertest": "7.0.0",
     "ts-jest": "29.1.4",
